--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-gamefils/*.zip
- filter=lfs diff=lfs merge=lfs -text
-*.zip !text !filter !merge !diff
-*.zip filter=lfs diff=lfs merge=lfs -text
+# Ensure consistent line endings for text files
+*.sh     text eol=lf
+*.md     text eol=lf
+Dockerfile text eol=lf
