--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,8 +47,36 @@ jobs:
           else
             echo "tag=latest" >> $GITHUB_OUTPUT
           fi
-      - name: Build and push Docker image
-        id: push
+      - name: Build Docker image
+        id: build
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: false
+          tags: ghcr.io/danpowell88/ravenshield_dedicatedserver:${{ steps.set_tag.outputs.tag }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+      - name: Run Docker container
+        run: |
+          docker run -d --name test-container ghcr.io/danpowell88/ravenshield_dedicatedserver:${{ steps.set_tag.outputs.tag }}
+          sleep 60
+      - name: Wait for health check
+        run: |
+          for i in {1..30}; do
+            if [ "$(docker inspect --format='{{json .State.Health.Status}}' test-container)" = "\"healthy\"" ]; then
+              echo "Container is healthy"
+              exit 0
+            fi
+            sleep 5
+          done
+          echo "Health check failed"
+          docker logs test-container
+          exit 1
+      - name: Stop and remove container
+        run: |
+          docker stop test-container
+          docker rm test-container
+      - name: Push Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -60,7 +88,7 @@ jobs:
         uses: actions/attest-build-provenance@v2
         with:
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
-          subject-digest: ${{ steps.push.outputs.digest }}
+          subject-digest: ${{ steps.build.outputs.digest }}
           push-to-registry: true
       - name: Set image tag for main image
         id: set_tag_alpine
@@ -69,9 +97,68 @@ jobs:
             echo "tag=pr-${{ github.event.pull_request.number }}-alpine" >> $GITHUB_OUTPUT
           else
             echo "tag=latest-alpine" >> $GITHUB_OUTPUT
-          fi               
-      - name: Build and push Docker image (alpine)
-        id: push-alpine
+          fi
+
+  build-alpine:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          lfs: true
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3  
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-        
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set image tag for main image
+        id: set_tag
+        run: |
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            echo "tag=pr-${{ github.event.pull_request.number }}-alpine" >> $GITHUB_OUTPUT
+          else
+            echo "tag=latest-alpine" >> $GITHUB_OUTPUT
+          fi      
+      - name: Build Docker image (alpine)
+        id: build-alpine
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: Dockerfile.alpine
+          push: false
+          tags: ghcr.io/danpowell88/ravenshield_dedicatedserver:${{ steps.set_tag.outputs.tag }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+      - name: Run Docker container (alpine)
+        run: |
+          docker run -d --name test-container-alpine ghcr.io/danpowell88/ravenshield_dedicatedserver:${{ steps.set_tag.outputs.tag }}
+      - name: Wait for health check (alpine)
+        run: |
+          for i in {1..30}; do
+            if [ "$(docker inspect --format='{{json .State.Health.Status}}' test-container-alpine)" = "\"healthy\"" ]; then
+              echo "Container is healthy"
+              exit 0
+            fi
+            sleep 5
+          done
+          echo "Health check failed"
+          docker logs test-container-alpine
+          exit 1
+      - name: Stop and remove container (alpine)
+        run: |
+          docker stop test-container-alpine
+          docker rm test-container-alpine
+      - name: Push Docker image (alpine)
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -80,16 +167,9 @@ jobs:
           tags: ghcr.io/danpowell88/ravenshield_dedicatedserver:${{ steps.set_tag_alpine.outputs.tag }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v2
-        with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
-          subject-digest: ${{ steps.push-alpine.outputs.digest }}
-          push-to-registry: true                          
       # Temp fix for https://github.com/docker/build-push-action/issues/252
       # This ugly bit is necessary if you don't want your cache to grow forever
       - name: Move cache
         run: |
           rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache                
-   
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
