--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,22 +53,33 @@ jobs:
         with:
           context: .
           push: false
-          tags: ghcr.io/danpowell88/ravenshield_dedicatedserver:${{ steps.set_tag.outputs.tag }}
+          tags: |
+            ghcr.io/danpowell88/ravenshield_dedicatedserver:${{ steps.set_tag.outputs.tag }}
+            ravenshield_dedicatedserver:${{ steps.set_tag.outputs.tag }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+          load: true
       - name: Run Docker container
         run: |
-          docker run -d --name test-container ghcr.io/danpowell88/ravenshield_dedicatedserver:${{ steps.set_tag.outputs.tag }}
-          sleep 60
+          docker run -d -p 8777:8777/udp --name test-container ravenshield_dedicatedserver:${{ steps.set_tag.outputs.tag }}
       - name: Wait for health check
         run: |
-          for i in {1..30}; do
-            if [ "$(docker inspect --format='{{json .State.Health.Status}}' test-container)" = "\"healthy\"" ]; then
+          START_TIME=$(date -Is)   # RFC-3339 timestamp
+          for i in {1..50}; do
+            STATUS=$(docker inspect --format='{{json .State.Health.Status}}' test-container)
+            if [ "$STATUS" = "\"healthy\"" ]; then
               echo "Container is healthy"
               exit 0
             fi
+  
+            echo "[$(date -Is)] attempt $i/30 - current status: $STATUS"
+            # show only logs produced since the previous iteration
+            docker logs --since "$START_TIME" test-container || true
+            START_TIME=$(date -Is)
+  
             sleep 5
           done
+  
           echo "Health check failed"
           docker logs test-container
           exit 1
@@ -81,7 +92,8 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/danpowell88/ravenshield_dedicatedserver:${{ steps.set_tag.outputs.tag }}
+          tags: |
+            ghcr.io/danpowell88/ravenshield_dedicatedserver:${{ steps.set_tag.outputs.tag }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
       - name: Generate artifact attestation
@@ -90,14 +102,6 @@ jobs:
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
           subject-digest: ${{ steps.build.outputs.digest }}
           push-to-registry: true
-      - name: Set image tag for main image
-        id: set_tag_alpine
-        run: |
-          if [ "${{ github.event_name }}" = "pull_request" ]; then
-            echo "tag=pr-${{ github.event.pull_request.number }}-alpine" >> $GITHUB_OUTPUT
-          else
-            echo "tag=latest-alpine" >> $GITHUB_OUTPUT
-          fi
 
   build-alpine:
     runs-on: ubuntu-latest
@@ -130,43 +134,61 @@ jobs:
             echo "tag=latest-alpine" >> $GITHUB_OUTPUT
           fi      
       - name: Build Docker image (alpine)
-        id: build-alpine
+        id: build
         uses: docker/build-push-action@v6
         with:
           context: .
           file: Dockerfile.alpine
           push: false
-          tags: ghcr.io/danpowell88/ravenshield_dedicatedserver:${{ steps.set_tag.outputs.tag }}
+          tags: |
+            ghcr.io/danpowell88/ravenshield_dedicatedserver:${{ steps.set_tag.outputs.tag }}
+            ravenshield_dedicatedserver:${{ steps.set_tag.outputs.tag }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+          load: true
       - name: Run Docker container (alpine)
         run: |
-          docker run -d --name test-container-alpine ghcr.io/danpowell88/ravenshield_dedicatedserver:${{ steps.set_tag.outputs.tag }}
-      - name: Wait for health check (alpine)
+          docker run -d -p 8777:8777/udp --name test-container ravenshield_dedicatedserver:${{ steps.set_tag.outputs.tag }}
+      - name: Wait for health check
         run: |
-          for i in {1..30}; do
-            if [ "$(docker inspect --format='{{json .State.Health.Status}}' test-container-alpine)" = "\"healthy\"" ]; then
+          START_TIME=$(date -Is)   # RFC-3339 timestamp
+          for i in {1..50}; do
+            STATUS=$(docker inspect --format='{{json .State.Health.Status}}' test-container)
+            if [ "$STATUS" = "\"healthy\"" ]; then
               echo "Container is healthy"
               exit 0
             fi
+    
+            echo "[$(date -Is)] attempt $i/30 - current status: $STATUS"
+            # show only logs produced since the previous iteration
+            docker logs --since "$START_TIME" test-container || true
+            START_TIME=$(date -Is)
+    
             sleep 5
           done
+    
           echo "Health check failed"
-          docker logs test-container-alpine
+          docker logs test-container
           exit 1
       - name: Stop and remove container (alpine)
         run: |
-          docker stop test-container-alpine
-          docker rm test-container-alpine
+          docker stop test-container
+          docker rm test-container
       - name: Push Docker image (alpine)
         uses: docker/build-push-action@v6
         with:
           context: .
           file: Dockerfile.alpine
           push: true
-          tags: ghcr.io/danpowell88/ravenshield_dedicatedserver:${{ steps.set_tag_alpine.outputs.tag }}
+          tags: ghcr.io/danpowell88/ravenshield_dedicatedserver:${{ steps.set_tag.outputs.tag }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v2
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+          subject-digest: ${{ steps.build.outputs.digest }}
+          push-to-registry: true          
       # Temp fix for https://github.com/docker/build-push-action/issues/252
       # This ugly bit is necessary if you don't want your cache to grow forever
       - name: Move cache
